# sw

./: CHANGELOG.md  Cargo.toml  README.md  README.org  default.nix  deny.toml  release-checklist.md  shell.nix
docs/: .gitignore  Makefile  sw.1.scd
src/: color.rs  command.rs  error.rs  lib.rs  logger.rs  main.rs  parse.rs  shell.rs  state.rs  stopwatch.rs  tests.rs
src/parse/: long.rs  short.rs  sw.rs  unit.rs
