[package]
name = "sw"
version = "0.14.0"
authors = ["Ula Shipman <ula.hello@mailbox.org>"]
edition = "2021"
rust-version = "1.70.0"
readme = "README.org"
description = "terminal stopwatch"
repository = "https://github.com/ulahello/sw"
license = "GPL-3.0-or-later"
keywords = ["stopwatch"]
categories = ["command-line-utilities"]

[dependencies]
argh = "0.1.12"
libsw-core = { version = "0.1.0", features = ["std"] }
strsim = "0.11.1"
termcolor = "1.4.1"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.13"

[profile.release]
lto = true
